--- a/russellsaw.io/io-russellsaw.yaml
+++ b/russellsaw.io/io-russellsaw.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: arussellsaw/io-russellsaw:latest
+        image: arussellsaw/io-russellsaw:10022019
         ports:
         - containerPort: 80
 ---
@@ -42,6 +42,23 @@ metadata:
 spec:
   rules:
   - host: russellsaw.io
+    http:
+      paths:
+      - backend:
+          serviceName: io-russellsaw
+          servicePort: 80
+        path: /
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  annotations:
+    kubernetes.io/ingress.class: traefik
+  name: engineer-dank
+  namespace: default
+spec:
+  rules:
+  - host: dank.engineer
     http:
       paths:
       - backend:
